// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`location-management/src/components/LocationUnitList do not show spinner if hierarchies in state 1`] = `
Array [
  Object {
    "geographicLevel": 0,
    "id": "a26ca9c8-1441-495a-83b6-bb5df7698996",
    "key": "0",
    "name": "Tunisia",
  },
  Object {
    "geographicLevel": 1,
    "id": "e66a6f38-93d5-42c2-ba1d-57b6d529baa6",
    "key": "1",
    "name": "KAIROUAN",
  },
  Object {
    "geographicLevel": 1,
    "id": "ede2c7cf-331e-497e-9c7f-2f914d734604",
    "key": "2",
    "name": "Sousse",
  },
]
`;

exports[`location-management/src/components/LocationUnitList do not show spinner if hierarchies in state 2`] = `
Array [
  Object {
    "geographicLevel": 0,
    "id": "a26ca9c8-1441-495a-83b6-bb5df7698996",
    "key": "0",
    "name": "Tunisia",
  },
  Object {
    "geographicLevel": 1,
    "id": "e66a6f38-93d5-42c2-ba1d-57b6d529baa6",
    "key": "1",
    "name": "KAIROUAN",
  },
  Object {
    "geographicLevel": 1,
    "id": "ede2c7cf-331e-497e-9c7f-2f914d734604",
    "key": "2",
    "name": "Sousse",
  },
]
`;

exports[`location-management/src/components/LocationUnitList location unit table renders correctly 1`] = `
Object {
  "data": Array [
    Object {
      "geographicLevel": 0,
      "id": "b652b2f4-a95d-489b-9e28-4629746db96a",
      "key": "0",
      "name": "Kenya",
    },
    Object {
      "geographicLevel": 0,
      "id": "6bf9c085-350b-4bb2-990f-80dc2caafb33",
      "key": "1",
      "name": "Malawi",
    },
    Object {
      "geographicLevel": 0,
      "id": "a26ca9c8-1441-495a-83b6-bb5df7698996",
      "key": "2",
      "name": "Tunisia",
    },
  ],
  "onViewDetails": [Function],
}
`;
